# daart

./: .gitignore  .readthedocs.yaml  =1.2.0  README.md  pyproject.toml  requirements.txt  run_segmentation.py  setup.cfg  setup.py
configs/: data.yaml  model.yaml  train.yaml
daart/: callbacks.py  data.py  eval.py  io.py  losses.py  testtube.py  train.py  transforms.py  utils.py
daart/api/: model.py
daart/cli/: formatting.py  main.py  types.py
daart/models/: LSTM.py  README.md  __init__.py  base.py  lstm.py  rnn.py  supervised.py  tcn.py  temporalconv.py  temporalmlp.py  tgm.py
daart_tmp_data_AaA/labels/: sess-0_labeled.csv
data/: README.md
data/configs/: data.yaml  model.yaml  train.yaml
data/labels-hand/: 2019_06_26_fly2.csv  2019_06_26_fly2_labels.csv  2019_08_07_fly2.csv  2019_08_07_fly2_labels.csv
data/labels-heuristic/: 2019_06_26_fly2.csv  2019_06_26_fly2_labels.csv  2019_06_26_fly2_labels.pkl  2019_08_07_fly2.csv  2019_08_07_fly2_labels.csv  2019_08_07_fly2_labels.pkl
docs/: README.md  conf.py  index.rst  requirements.txt
docs/api/: daart.callbacks.AnnealHparam.rst  daart.callbacks.BaseCallback.rst  daart.callbacks.EarlyStopping.rst  daart.callbacks.PseudoLabels.rst  daart.callbacks.UPS.rst  daart.data.DataGenerator.rst  daart.data.SingleDataset.rst  daart.data.compute_sequence_pad.rst  daart.data.compute_sequences.rst  daart.data.load_feature_csv.rst  daart.data.load_label_csv.rst  daart.data.load_label_pkl.rst  daart.data.load_marker_csv.rst  daart.data.load_marker_h5.rst  daart.data.split_trials.rst  daart.eval.get_precision_recall.rst  daart.eval.int_over_union.rst  daart.eval.load_metrics_csv_as_df.rst  daart.eval.plot_training_curves.rst  daart.eval.run_lengths.rst  daart.io.export_expt_info_to_csv.rst  daart.io.export_hparams.rst  daart.io.find_experiment.rst  daart.io.get_expt_dir.rst  daart.io.get_model_dir.rst  daart.io.get_model_params.rst  daart.io.get_subdirs.rst  daart.io.make_dir_if_not_exists.rst  daart.io.read_expt_info_from_csv.rst  daart.losses.kl_div_to_std_normal.rst  daart.models.base.BaseModel.rst  daart.models.base.Ensembler.rst  daart.models.base.Segmenter.rst  daart.models.base.get_activation_func_from_str.rst  daart.models.base.reparameterize_gaussian.rst  daart.models.rnn.RNN.rst  daart.models.tcn.DilatedTCN.rst  (+16 more)
examples/: demo.ipynb  fit_models.ipynb  fit_models.py
tests/: README.md  conftest.py  integration.py  test_data.py  test_eval.py  test_losses.py  test_transforms.py
(+17 files in other folders)
